[gd_scene load_steps=14 format=3 uid="uid://cs6lw0g4ggesh"]

[ext_resource type="Script" path="res://player/player.gd" id="1_mpsnb"]
[ext_resource type="Texture2D" uid="uid://fs3luuvvab20" path="res://Art/sprites/Player/AnimatedProtagonist.png" id="2_cdgip"]
[ext_resource type="Script" path="res://player/cameraController.gd" id="3_8ehrr"]
[ext_resource type="AudioStream" uid="uid://4c1dhouqntxi" path="res://Audio/SFX/Spells/Primary-Spell-Fire-1.wav" id="3_doeua"]
[ext_resource type="Texture2D" uid="uid://cv5jwgug1hvdr" path="res://Art/sprites/Player/Staff-V1.png" id="3_snvye"]
[ext_resource type="AudioStream" uid="uid://bxo6cqk624i2b" path="res://Audio/SFX/Player/Dodge SFX (V1).wav" id="5_tinh4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sg52c"]
radius = 65.4

[sub_resource type="Animation" id="Animation_lc5xa"]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 8, 9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_f61hc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_54xyp"]
resource_name = "Walk"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20, 21, 22, 23, 24]
}

[sub_resource type="Animation" id="Animation_p41uy"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8snk2"]
_data = {
"Die": SubResource("Animation_lc5xa"),
"Idle": SubResource("Animation_p41uy"),
"RESET": SubResource("Animation_f61hc"),
"Walk": SubResource("Animation_54xyp")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_83m5b"]
radius = 80.64

[node name="Player" type="CharacterBody2D"]
z_index = 1
scale = Vector2(0.7, 0.7)
collision_layer = 2
collision_mask = 17
script = ExtResource("1_mpsnb")
MAX_SPEED = 400
staff_offset = 14

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, -31.4286)
scale = Vector2(6.325, 6.325)
texture = ExtResource("2_cdgip")
hframes = 25

[node name="StaffSprite" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-44.2857, 10)
rotation = -0.785398
scale = Vector2(4.94286, 4.94286)
texture = ExtResource("3_snvye")

[node name="ProjectileSpawn" type="Marker2D" parent="StaffSprite"]
position = Vector2(8.49141, -8.67534)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sg52c")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(0.24, 0.24)
zoom = Vector2(0.8, 0.8)
position_smoothing_speed = 9.0
script = ExtResource("3_8ehrr")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DodgeRecharge" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="DodgeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="EnemyAttackTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_8snk2")
}

[node name="player_hitbox" type="Area2D" parent="." groups=["Player"]]
visible = false
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox" groups=["Player"]]
shape = SubResource("CircleShape2D_83m5b")

[node name="SpellSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_doeua")
volume_db = -5.2

[node name="DodgeSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_tinh4")
volume_db = 2.0

[connection signal="area_entered" from="player_hitbox" to="." method="_on_player_hitbox_area_entered"]
[connection signal="area_exited" from="player_hitbox" to="." method="_on_player_hitbox_area_exited"]
